css/bc-custom.css
/* Application background */

body,
prm-brief-result-container .list-item-primary-content,
.full-view-inner-container,
md-content,
md-content.md-primoExplore-theme {
    background-color: #FFFFFF;
}

prm-brief-result-container .list-item-primary-content:before {
    background-color: #F3F3F3;
}


/* Advanced Search */

prm-search-bar,
prm-collection-gallery-header .collection-header-inner,
prm-search-bar .advanced-search-backdrop {
    background-color: #dfddcf;
}


/* Action Icons */

.result-item-actions .md-icon-button {
    color: #555;
}

prm-facet .sidebar-title {
    display: none;
}


/* Hide Tags in Detailed Display */

[aria-label="Tags"] {
    display: none;
}

#tags {
    display: none;
}


/* Fix overlay background */

md-content.overlay-menu-content {
    background-color: #8a100b;
}


/* Fix item expanded background */

.item-expanded .action-list-content:before,
.item-hovered .action-list-content:before {
    background-color: #F3F3F3
}

.item-expanded prm-brief-result-container .list-item-primary-content {
    background-color: inherit;
}


/* Fix topbar links contrast */

prm-topbar .md-button,
.md-button.button-over-dark,
prm-user-area md-fab-toolbar .md-fab-action-item .md-button {
    color: #F3F3F3;
}


/* Hide account edit icon */

prm-personal-info .md-toolbar-tools {
    display: none;
}


/* Hide notification checkboxes */

prm-personal-info .card-content-section:nth-child(5) {
    display: none;
}


/* Hide A-Z letters */

prm-alphabet-toolbar {
    display: none;
}


/* Accessibility: Contrast Fixes */

prm-user-area .user-menu-button .user-name,
prm-topbar .md-button,
.md-button.button-over-dark,
prm-user-area md-fab-toolbar .md-fab-action-item .md-button {
    color: #F3F3F3;
    background-color: #741310;
}

.bar prm-authentication .md-button {
    color: #204375;
}

.prm-text.prm-hue1,
body.prm-hue1,
.weak-text,
.numbered-list .item::before,
prm-brief-result-container .media-content-type,
prm-snippet prm-icon,
a.prm-hue1.a-tag-as-wrapper,
.md-button.arrow-link-button .prm-hue1.a-tag-as-wrapper.button-content,
.recommendations-title:hover>span>span.prm-hue1.a-tag-as-wrapper,
.recommendations-title.hover>span>span.prm-hue1.a-tag-as-wrapper,
.hack-a-tag-unclickable a.prm-hue1,
.hack-a-tag-unclickable .md-button.arrow-link-button .prm-hue1.button-content,
.md-button.arrow-link-button .hack-a-tag-unclickable .prm-hue1.button-content,
prm-search-bar.prm-hue1,
prm-journals-search-bar.prm-hue1,
prm-virtual-browse-item md-card md-card-title.prm-hue1,
prm-virtual-browse-item md-card md-card-content.prm-hue1,
md-input-container.static-select.md-input-has-value label.prm-hue1,
.presentable-disabled-inputs md-input-container label.prm-hue1,
md-toolbar.prm-hue1.transparent-toolbar,
md-toolbar.prm-hue1.default-toolbar {
    color: #555555;
}

.duedate>span,
.fulltext>span,
.fulltext_linktorsrc>span,
.getit>span,
.login-dialog .collapsable-container md-list md-list-item .md-list-item-inner,
.login-dialog .md-list[class$="-line"] md-list-item .md-list-item-text .list-item-title,
.login-dialog .md-list[class$="-line"] md-list-item .md-list-item-text h3,
.login-dialog .md-list[class$="-line"] md-list-item>.md-no-style .md-list-item-text .list-item-title,
.login-dialog .md-list[class$="-line"] md-list-item>.md-no-style .md-list-item-text h3,
.login-dialog .md-list md-list-item .md-list-item-text .list-item-title,
.login-dialog .md-list md-list-item .md-list-item-text h3,
.login-dialog .md-list md-list-item>.md-no-style .md-list-item-text .list-item-title,
.login-dialog .md-list md-list-item>.md-no-style .md-list-item-text h3,
.login-dialog md-list md-list-item .md-list-item-text .list-item-title,
.login-dialog md-list md-list-item .md-list-item-text h3,
.login-dialog md-list md-list-item>.md-no-style .md-list-item-text .list-item-title,
.login-dialog md-list md-list-item>.md-no-style .md-list-item-text h3,
.md-button.arrow-link-button .button-content,
.md-button.arrow-link-button [link-arrow],
.not_restricted>span,
.prm-links,
.restricted>span,
.separate-list-items md-list-item .item-loader-with-text .md-button,
.tiles-grid-tile .tile-header .header-link .arrow-icon,
.tiles-grid-tile .tile-header .header-link:focus,
.tiles-grid-tile .tile-header .header-link:hover,
.tiles-grid-tile .tile-header .md-button,
[class*="_more"]>span,
[class*="_unknown"]>span,
[class*="available"]>span,
[class*="check_"]>span,
[class*="does_not_exist"]>span,
[class*="FT"]>span,
[class*="may_"]>span,
[class*="NFT"]>span,
[class*="no_"]>span,
[class*="unavailable"]>span,
a,
md-grid-tile .tile-header .header-link .arrow-icon,
md-grid-tile .tile-header .header-link:focus,
md-grid-tile .tile-header .header-link:hover,
md-grid-tile .tile-header .md-button,
md-input-container.has-fixed-message [ng-message] a,
md-list-item.list-item-as-link,
md-tabs.tabs-as-app .back-button,
md-tabs.tabs-as-links md-tab-item,
md-tabs.tabs-as-links md-tab-item:not([disabled]),
prm-tags-list .md-chips .md-chip .md-chip-content strong,
prm-tags-list .md-chips md-chip .md-chip-content strong,
prm-tags-list md-chips .md-chip .md-chip-content strong,
prm-tags-list md-chips md-chip .md-chip-content strong {
    color: #204375;
}


/* Responsive YouTube embed */

.embed-container {
    position: relative;
    padding-bottom: 56.25%;
    margin-bottom: 1em;
    height: 0;
    overflow: hidden;
    max-width: 100%;
}

.embed-container iframe,
.embed-container object,
.embed-container embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}


/* Search switch buttons */

prm-browse-search-bar .search-switch-buttons .md-button.switch-to-advanced,
prm-journals-search-bar .search-switch-buttons .md-button.switch-to-advanced,
prm-search-bar .search-switch-buttons .md-button.switch-to-advanced,
prm-tags-search-bar .search-switch-buttons .md-button.switch-to-advanced {
    color: #501315;
}


/* Collections */

prm-collection-gallery-header .collection-header-inner {
    color: #3a3a3a;
}

prm-collection-navigation-breadcrumbs-item .md-button.button-as-link.link-alt-color,
prm-collection-gallery-header .collection-header-inner.has-backdrop-image {
    color: #FAFAFA;
}

